--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:+'
     compile files('../libs/com.haarman.listviewanimations-2.6.0.jar')
     compile files('../libs/nineoldandroids-2.4.0.jar')
+    compile files('../libs/picasso-2.2.0.jar')
     compile project(':facebook')
+    compile 'com.android.support:support-v4:19.+'
 }
