--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,28 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.entourage.app.auth.LoginActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Holo.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.facebook.LoginActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:label="@string/app_name" />
-        <activity android:name="com.entourage.app.MainActivity"
-            android:theme="@style/AppTheme"
-            android:label="@string/app_name" />
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_fb_id" />
+        <activity
+            android:name="com.entourage.app.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" />
 
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_fb_id" />
+
+        <activity
+            android:name="com.entourage.app.profile.PickPictureActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_pick_picture"
+            android:theme="@style/AppTheme" >
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
