--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile files('../libs/picasso-2.2.0.jar')
     compile project(':facebook')
     compile 'com.android.support:support-v4:19.+'
+    compile 'com.github.eluleci:flatui:2.0.0'
 }
