--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,24 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.entourage.app.auth.LoginActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo.NoActionBar">
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="@string/app_name" />
+
         <activity
             android:name="com.entourage.app.MainActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" />
 
@@ -27,8 +36,15 @@
 
         <activity
             android:name="com.entourage.app.profile.PickPictureActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_pick_picture"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
+        </activity>
+
+        <activity
+            android:name="com.entourage.app.places.SearchPlaceActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme" >
         </activity>
     </application>
